--- a/index.html
+++ b/index.html
@@ -1,18 +1,23 @@
-<!-- Version 1.7.1 — Patch: Black text outline in categories -->
+<!-- Version 1.8.0 — Island Icons + Editable Category Colors -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="UTF-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <title>Tier List</title>
+
+<!-- Google Material Icons -->
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
 <style>
 body{margin:0;padding:0;font-family:Arial,sans-serif;background:#f4f4f4;}
 h1{text-align:center;margin:10px;}
+
 .tier-container{display:flex;align-items:center;flex-wrap:wrap;margin:5px 10px;}
 .label{
     min-width:120px;
     padding:10px 15px;
-    margin-right:10px;
+    margin-right:5px;
     text-align:center;
     font-weight:bold;
     border-radius:12px;
@@ -20,8 +25,12 @@ h1{text-align:center;margin:10px;}
     font-size:16px;
     box-shadow:2px 2px 8px rgba(0,0,0,.3);
     cursor:pointer;
-    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000; /* Black outline */
+    text-shadow:-1px -1px 0 #000,1px -1px 0 #000,-1px 1px 0 #000,1px 1px 0 #000;
+    display:flex;
+    align-items:center;
+    gap:5px;
 }
+.color-picker{width:18px;height:18px;border:2px solid #000;border-radius:50%;cursor:pointer;}
 .tier{display:flex;flex-wrap:wrap;gap:5px;padding:10px;min-height:80px;border-radius:12px;margin:5px 0;background:#fff;box-shadow:1px 1px 6px rgba(0,0,0,.2);flex:1;cursor:pointer;}
 .unranked{display:flex;flex-wrap:wrap;gap:5px;padding:10px;min-height:80px;background:#ddd;border:2px dashed #999;margin:5px 10px 20px;border-radius:12px;}
 .img-wrapper{position:relative;width:60px;height:60px;border-radius:6px;overflow:hidden;cursor:pointer;}
@@ -31,15 +40,18 @@ h1{text-align:center;margin:10px;}
 .delete-btn{position:absolute;top:-6px;right:-6px;background:rgba(255,0,0,.9);color:#fff;border:0;border-radius:50%;width:20px;height:20px;line-height:20px;font-size:14px;cursor:pointer;}
 
 /* Island panel */
-#island{position:fixed;bottom:10px;left:50%;transform:translateX(-50%);background:#888;padding:10px;border-radius:12px;box-shadow:2px 2px 12px rgba(0,0,0,.4);z-index:1000;transition:width 0.3s,max-height 0.3s;overflow:hidden;width:250px;max-height:40px;}
+#island{position:fixed;bottom:10px;left:50%;transform:translateX(-50%);background:#888;padding:10px;border-radius:12px;box-shadow:2px 2px 12px rgba(0,0,0,.4);z-index:1000;transition:width 0.3s,max-height 0.3s;overflow:hidden;width:250px;max-height:40px;display:flex;flex-direction:column;}
 #island.expanded{max-height:300px;width:400px;}
-#islandHeader{cursor:pointer;color:#fff;font-weight:bold;margin-bottom:5px;}
-#islandContent{display:none;flex-direction:column;}
-#island.expanded #islandContent{display:flex;}
+#islandHeader{cursor:pointer;color:#fff;font-weight:bold;margin-bottom:5px;display:flex;align-items:center;gap:10px;}
 
-/* Buttons inside island */
+/* Buttons as icons next to header */
+.icon-btn{width:28px;height:28px;border-radius:50%;display:flex;justify-content:center;align-items:center;background:#aaa;color:#fff;cursor:pointer;font-size:20px;transition:transform .15s;}
+.icon-btn:hover{transform:scale(1.2);}
+
+/* Island content */
+#islandContent{display:none;flex-direction:column;margin-top:10px;}
+#island.expanded #islandContent{display:flex;}
 .island-btn{margin:3px;padding:4px 6px;border:none;border-radius:4px;background:#aaa;color:#fff;cursor:pointer;}
-.color-option{width:25px;height:25px;display:inline-block;margin:3px;border-radius:4px;cursor:pointer;border:2px solid #555;}
 </style>
 </head>
 <body>
@@ -54,13 +66,14 @@ h1{text-align:center;margin:10px;}
 
 <!-- Island Panel -->
 <div id="island">
-  <div id="islandHeader">Options</div>
+  <div id="islandHeader">
+    Options
+    <div id="saveIcon" class="icon-btn material-icons" title="Save">save</div>
+    <div id="loadIcon" class="icon-btn material-icons" title="Load">folder_open</div>
+    <div id="addCatIcon" class="icon-btn material-icons" title="Add Category">add</div>
+    <div id="creditsIcon" class="icon-btn material-icons" title="Credits">info</div>
+  </div>
   <div id="islandContent">
-    <button id="saveBtn" class="island-btn">Save</button>
-    <button id="loadBtn" class="island-btn">Load</button>
-    <button id="addCatBtn" class="island-btn">Add Category</button>
-    <button id="creditsBtn" class="island-btn">Credits</button>
-
     <div id="addCategoryPanel" style="display:none;margin-top:5px;">
       <label>Category Name: <input type="text" id="newCategoryName"/></label><br>
       <div id="bgColors"></div>
@@ -85,33 +98,31 @@ h1{text-align:center;margin:10px;}
 
 <script>
 // ---------- TIERS ----------
-const tierData=[20,17,15,12,8,0,-500];
-function scoreToColor(score){if(score>=20) return "red";if(score>=17) return "orange";if(score>=15) return "yellow";if(score>=12) return "green";if(score>=8) return "blue";return "gray";}
-function createTier(score,name){
-  let container=document.createElement("div");
-  container.className="tier-container";
-  let label=document.createElement("div");
-  label.className="label"; label.style.background=scoreToColor(score); label.textContent=name||score;
-  let tier=document.createElement("div"); tier.className="tier"; tier.dataset.score=score;
-  container.appendChild(label); container.appendChild(tier);
-  document.getElementById("tiers").appendChild(container);
-
-  [label,tier].forEach(el=>{
-    el.addEventListener("click",()=>{if(selectedWrapper){el.closest(".tier-container").querySelector(".tier").appendChild(selectedWrapper); selectedWrapper.classList.remove("selected"); selectedWrapper=null; saveData();}});
-  });
+let tierData=[20,17,15,12,8,0,-500];
+function scoreToColor(score){if(score>=20) return "#ff0000";if(score>=17) return "#ff5500";if(score>=15) return "#ffff00";if(score>=12) return "#00ff00";if(score>=8) return "#0099ff";return "#555";}
+function createTier(score,name,color){
+  let container=document.createElement("div");container.className="tier-container";
+  let label=document.createElement("div");label.className="label";label.textContent=name||score;
+  label.style.background=color||scoreToColor(score);
+  const colorPick=document.createElement("input"); colorPick.type="color"; colorPick.value=color||scoreToColor(score); colorPick.className="color-picker";
+  colorPick.addEventListener("input",()=>{label.style.background=colorPick.value; saveData();});
+  label.appendChild(colorPick);
+  let tier=document.createElement("div");tier.className="tier";tier.dataset.score=score;
+  container.appendChild(label);container.appendChild(tier);document.getElementById("tiers").appendChild(container);
+  [label,tier].forEach(el=>{el.addEventListener("click",()=>{if(selectedWrapper){el.closest(".tier-container").querySelector(".tier").appendChild(selectedWrapper); selectedWrapper.classList.remove("selected"); selectedWrapper=null; saveData();}});});
 }
 tierData.forEach(t=>createTier(t));
 
 // ---------- IMAGE SELECTION ----------
 let imgCount=0, selectedWrapper=null, cropQueue=[], cropping=false;
-function selectWrapper(wrapper){ if(selectedWrapper) selectedWrapper.classList.remove("selected"); selectedWrapper=wrapper; if(wrapper) wrapper.classList.add("selected"); }
+function selectWrapper(wrapper){if(selectedWrapper)selectedWrapper.classList.remove("selected");selectedWrapper=wrapper;if(wrapper)wrapper.classList.add("selected");}
 function createImageWrapper(src){
-  const wrap=document.createElement("div"); wrap.className="img-wrapper"; wrap.id="img"+(++imgCount);
-  const img=document.createElement("img"); img.src=src;
-  const del=document.createElement("button"); del.className="delete-btn"; del.textContent="×";
-  del.addEventListener("click", e=>{e.stopPropagation(); wrap.remove(); if(selectedWrapper===wrap) selectedWrapper=null; saveData();});
-  wrap.appendChild(img); wrap.appendChild(del);
-  wrap.addEventListener("click", ()=>{if(wrap.closest(".tier") && !wrap.closest("#unranked")){document.getElementById("unranked").appendChild(wrap); saveData();}else{selectWrapper(selectedWrapper===wrap?null:wrap);}});
+  const wrap=document.createElement("div");wrap.className="img-wrapper";wrap.id="img"+(++imgCount);
+  const img=document.createElement("img");img.src=src;
+  const del=document.createElement("button");del.className="delete-btn";del.textContent="×";
+  del.addEventListener("click", e=>{e.stopPropagation();wrap.remove(); if(selectedWrapper===wrap) selectedWrapper=null; saveData();});
+  wrap.appendChild(img);wrap.appendChild(del);
+  wrap.addEventListener("click",()=>{if(wrap.closest(".tier") && !wrap.closest("#unranked")){document.getElementById("unranked").appendChild(wrap); saveData();}else{selectWrapper(selectedWrapper===wrap?null:wrap);}});
   return wrap;
 }
 
@@ -135,46 +146,46 @@ document.getElementById("imageUpload").addEventListener("change", e=>{Array.from
 // ---------- SAVE/LOAD ----------
 function saveData(){
   let data={title:document.getElementById("tierListTitle").innerText,tiers:[],unranked:[]};
-  document.querySelectorAll(".tier").forEach(t=>{data.tiers.push({score:t.dataset.score, imgs:Array.from(t.querySelectorAll("img")).map(i=>i.src)});});
+  document.querySelectorAll(".tier-container").forEach(container=>{
+    let tier=container.querySelector(".tier"),label=container.querySelector(".label");
+    data.tiers.push({score:tier.dataset.score,name:label.textContent, color:label.style.background, imgs:Array.from(tier.querySelectorAll("img")).map(i=>i.src)});
+  });
   data.unranked=Array.from(document.getElementById("unranked").querySelectorAll("img")).map(i=>i.src);
   return data;
 }
-document.getElementById("saveBtn").addEventListener("click",()=>{
+document.getElementById("saveIcon").addEventListener("click",()=>{
   let data=saveData(); let blob=new Blob([JSON.stringify(data)],{type:"application/json"}); let a=document.createElement("a"); a.href=URL.createObjectURL(blob); a.download="tierlist.json"; a.click();
 });
-document.getElementById("loadBtn").addEventListener("click",()=>document.getElementById("fileInput").click());
+document.getElementById("loadIcon").addEventListener("click",()=>document.getElementById("fileInput").click());
 document.getElementById("fileInput").addEventListener("change",e=>{
   let file=e.target.files[0]; if(!file) return;
   let reader=new FileReader();
   reader.onload=ev=>{
     let data=JSON.parse(ev.target.result);
     document.getElementById("tierListTitle").innerText=data.title||"My Tier List";
-    document.querySelectorAll(".tier").forEach(t=>t.innerHTML="");
-    data.tiers?.forEach((tdata,idx)=>{let tier=document.querySelectorAll(".tier")[idx]; (tdata.imgs||[]).forEach(src=>tier.appendChild(createImageWrapper(src)));});
+    document.querySelectorAll(".tier-container").forEach((container,idx)=>{
+      let tdata=data.tiers?.[idx]; if(!tdata) return;
+      let tier=container.querySelector(".tier"),label=container.querySelector(".label");
+      tier.innerHTML=""; label.textContent=tdata.name||label.textContent; label.style.background=tdata.color||label.style.background;
+      (tdata.imgs||[]).forEach(src=>tier.appendChild(createImageWrapper(src)));
+    });
     document.getElementById("unranked").innerHTML="";
     (data.unranked||[]).forEach(src=>addToUnranked(src));
   }; reader.readAsText(file);
 });
 
 // ---------- ISLAND PANEL ----------
-const island=document.getElementById("island");
-const header=document.getElementById("islandHeader");
+const island=document.getElementById("island");const header=document.getElementById("islandHeader");
 header.addEventListener("click",()=>island.classList.toggle("expanded"));
-
-// ---------- ADD CATEGORY PANEL ----------
-const colors=["#00ff00","#55ff00","#ccff00","#ffff00","#ff5500","#ff0000","#990000","#660066","#330033","#000000"];
-const bgContainer=document.getElementById("bgColors");
-let selectedColor=colors[0];
-colors.forEach(c=>{let d=document.createElement("div"); d.className="color-option"; d.style.background=c; d.addEventListener("click",()=>{document.querySelectorAll(".color-option").forEach(el=>el.style.border="2px solid #555"); d.style.border="3px solid #00f"; selectedColor=c;}); bgContainer.appendChild(d);});
-document.getElementById("addCatBtn").addEventListener("click",()=>{document.getElementById("addCategoryPanel").style.display="flex"; document.getElementById("creditsPanel").style.display="none";});
-document.getElementById("creditsBtn").addEventListener("click",()=>{document.getElementById("creditsPanel").style.display="block"; document.getElementById("addCategoryPanel").style.display="none";});
+document.getElementById("addCatIcon").addEventListener("click",()=>{document.getElementById("addCategoryPanel").style.display="flex"; document.getElementById("creditsPanel").style.display="none"; island.classList.add("expanded");});
+document.getElementById("creditsIcon").addEventListener("click",()=>{document.getElementById("creditsPanel").style.display="block"; document.getElementById("addCategoryPanel").style.display="none"; island.classList.add("expanded");});
 document.getElementById("createCategoryBtn").addEventListener("click",()=>{
   const name=document.getElementById("newCategoryName").value||"New Tier";
   createTier(Date.now(),name); document.getElementById("newCategoryName").value="";
 });
 </script>
 
-<footer style="position:fixed;right:10px;bottom:10px;background:rgba(100,100,100,.55);color:#fff;font-size:12px;padding:4px 8px;border-radius:8px;opacity:.85;z-index:100000;">Version 1.7.1 — Patch: Black Outline</footer>
+<footer style="position:fixed;right:10px;bottom:10px;background:rgba(100,100,100,.55);color:#fff;font-size:12px;padding:4px 8px;border-radius:8px;opacity:.85;z-index:100000;">Version 1.8.0 — Island Icons + Editable Colors</footer>
 
 </body>
 </html>
